<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#AAFF00"
        android:gravity="center"
        android:text="@string/welcome_message"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#74D8BD5F"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radio_group_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:ems="5"
                android:text="@string/gender_man" />

            <RadioButton
                android:id="@+id/radio_button_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="@string/gender_woman" />


        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/age_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F9FAF7"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="15dp" />


        <EditText
            android:id="@+id/edit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:inputType="textPersonName" />


    </LinearLayout>

    <CheckBox
        android:id="@+id/check_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree" />

    <Button
        android:id="@+id/accept_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_button"

        />


    <TextView
        android:id="@+id/final_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:textColor="#FFFF9100"
        android:textSize="20dp"
        android:visibility="invisible"

        />

    <Switch
        android:id="@+id/switch_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/switch_text"

        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ToggleButton
        android:id="@+id/toggle_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:enabled="false"
        android:checked="true"

        />



</LinearLayout>

